--- a/sample.html
+++ b/sample.html
@@ -8,8 +8,8 @@
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 
-	<script src="/js/cam.js"></script>
-	<link href="/css/style.css" rel="stylesheet">
+	<script src="js/cam.js"></script>
+	<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
