Made control_route optional for non ptz cameras.

--- a/sample.html
+++ b/sample.html
@@ -31,7 +31,7 @@
 		            },{
 		                'url': "http://192.168.0.11",
 		                'stream_route': "/videostream.cgi",
-		                'control_route': "/decoder_control.cgi",
+		                'control_route': false,
 		                'name': 'Garage'
 		        }]
 			});
